# tiledjinn

./: CMakeLists.txt  README.md
include/: tiledjinn.h
samples/: Actor.c  Actor.h  Barrel.c  Benchmark.c  ColorCycle.c  Forest.c  Mode7.c  Platformer.c  QueryLayer.c  Racer.h  Scaling.c  Shadow.c  Shooter.c  Shooter.h  Simon.c  SuperMarioClone.c  TestMouse.c  Tutorial.c  Wobble.c
src/: Blitters.c  Blitters.h  Draw.c  Draw.h  Engine.h  GaussianBlur.c  Layer.c  Layer.h  Math2D.c  Math2D.h  Object.c  Object.h  Palette.c  Palette.h  Sprite.c  Sprite.h  Tables.c  Tables.h  Tilemap.c  Tilemap.h  Tilengine.c  Tileset.c  Tileset.h  Window.c  World.c
test/: test_linescroll.c  test_pauseanimation.c  test_pivot.c
